# pytest-pep723

./: .buildinfo  .gitignore  CHANGELOG.rst  README.md  changelog.html  genindex.html  index.html  objects.inv  prek.toml  py-modindex.html  pyproject.toml  quickstart.html  readme_src.org  search.html  searchindex.js  sitemap.xml  towncrier.toml
.doctrees/: changelog.doctree  environment.pickle  index.doctree  quickstart.doctree
.doctrees/autoapi/: index.doctree
.doctrees/contributing/: doc_builds.doctree  index.doctree
.doctrees/howto/: faq.doctree  install.doctree
.doctrees/reference/: configuration.doctree  import-mappings.doctree
.doctrees/tutorials/: validating-a-project.doctree
.github/workflows/: ci.yml  ci_docs.yml  ci_prek.yml  release.yml
_modules/: index.html  pytest_pep723.html
_modules/pytest_pep723/: _version.html  extract.html  plugin.html
_sources/: changelog.rst.txt  index.rst.txt  quickstart.rst.txt
_sources/autoapi/: index.rst.txt
_sources/contributing/: doc_builds.rst.txt  index.rst.txt
_sources/howto/: faq.rst.txt  install.rst.txt
_sources/reference/: configuration.rst.txt  import-mappings.rst.txt
_sources/tutorials/: validating-a-project.rst.txt
autoapi/: index.html
autoapi/pytest_pep723/: index.html
contributing/: doc_builds.html  index.html
docs/orgmode/: changelog.org  index.org  quickstart.org
docs/source/: conf.py
howto/: faq.html  install.html
reference/: configuration.html  import-mappings.html
src/pytest_pep723/: __init__.py  extract.py  plugin.py
tests/: test_extract.py  test_plugin.py
tests/fixtures/: bad_script.py  compat_release_deps.py  good_script.py  (+3 more)
tutorials/: validating-a-project.html
(+18 files in other folders)
