[project]
name = "pytest-pep723"
dynamic = ["version"]
description = "Pytest plugin to verify PEP 723 inline script metadata covers all imports."
readme = "README.md"
authors = [
    { name = "Rohit Goswami", email = "rgoswami@ieee.org" }
]
requires-python = ">=3.10"
license = "MIT"
keywords = ["pytest", "pep723", "uv", "inline-metadata", "script", "dependencies"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
]
dependencies = ["pytest>=7"]

[project.entry-points.pytest11]
pep723 = "pytest_pep723.plugin"

[project.urls]
Homepage = "https://github.com/HaoZeke/pytest-pep723"
Repository = "https://github.com/HaoZeke/pytest-pep723"
Issues = "https://github.com/HaoZeke/pytest-pep723/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/pytest_pep723/_version.py"

[dependency-groups]
dev = ["pytest>=8", "pytest-cov", "ruff>=0.9"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
exclude = ["src/pytest_pep723/_version.py", "tests/fixtures/"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
